add initial modal for "what is this" and a few tweaks

--- a/src/index.scss
+++ b/src/index.scss
@@ -55,6 +55,10 @@ body {
 #step-sequencer {
   padding: 0 15px;
 
+  .sequencerRows {
+    height: 24px;
+  }
+
   .sequencer-cell:focus{
     outline: none;
   }
